# qlocalytics

./: CMakeLists.txt  Doxyfile.in  LICENSE.txt  README.md  qlocalytics.pro
src/: CMakeLists.txt  localyticsdatabase.cpp  localyticsdatabase.h  localyticssession.cpp  localyticssession.h  localyticsuploader.cpp  localyticsuploader.h  src.pro  webserviceconstants.h
tests/: CMakeLists.txt  tests.pro
tests/database/: .gitignore  CMakeLists.txt  database.pro  testdatabase.cpp
tests/session/: CMakeLists.txt  session.pro  testsession.cpp
